# ICP

./: .gitignore  CMakeLists.txt  README.md  requirements.system  requirements.txt
.github/workflows/: cmake.yml
data/: 15x3.txt  1x3.txt  2x12.txt  300pts.txt  30points_notebook_P.txt  30points_notebook_Q.txt  30x2P.txt  30x2Q.txt  3ptsP.txt  3ptsQ.txt  60pts.txt  6x3.txt  6x5.txt  9x6.txt
include/: error.cuh  error.hpp
include/cpu/: icp.hpp  tuple.hpp
include/gpu/: corresp.cuh  crosscov.cuh  dist.cuh  gputimer.cuh  icp.cuh
include/libCSV/: csv.hpp
include/libalg/: CPUMat.hpp  CPUMatrix.hpp  CPUNumber.hpp  CPUView.hpp  alg.hpp  basic_operations.hpp  broadcasting.hpp  matrix.hpp  mean.hpp  print.hpp  svd.hpp
include/libgpualg/: euclidist.cuh  mean.cuh  mult.cuh  ope.cuh  svd.cuh
include/libgpuicp/: batchcovs.cuh  corresp.cuh  corresp_optimized.cuh  crosscov.cuh  dist.cuh
src/cpu/: icp.cpp  main.cpp
src/gpu/: corresp.cu  crosscov.cu  dist.cu  gputimer.cu  hello.cu  icp.cu  main.cu  testcorrep.cu  testcrosscov.cu  testdist.cu
src/libCSV/: csv.cpp
src/libalg/: CPUMat.cpp  CPUMatrix.cpp  CPUNumber.cpp  CPUView.cpp  alg.cpp  basic_operations.cpp  broadcasting.cpp  matrix.cpp  mean.cpp  print.cpp  svd.cpp
src/libgpualg/: euclidist.cu  mean.cu  mult.cu  ope.cu  svd.cu
src/libgpuicp/: batchcovs.cu  corresp.cu  corresp_optimized.cu  crosscov.cu  dist.cu
src/testlibalg/: testcpumatrix.cpp  testlibalg.cpp  testlibalgcsvprint.cpp  testlibalgdotproduct.cpp  testlibalgmean.cpp  testmeanaxises.cpp  testview.cpp
src/testlibgpualg/: testdist.cu  testgpueuclid.cu  testgpumean.cu  testgpumult.cu  testgpuope.cu  testgpusvd.cu  testmean.cu
src/testlibgpuicp/: testbatchcovs.cu  testcorresp.cu  testcorresparray.cu  testcovsadd.cu  testcrosscov.cu  testcrosscovarray.cu  testdist.cu
tests/: SVD.py  benchmark.sh  operations.py  test.py
